--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
-.main {
+main {
     font-size: 1.2em;
     color: black;
 }
 body{background-color: #38A7C3;}
 .title {
-    padding-left: 25%;
-    display: inline-block;
+    text-align: center;
     margin-top: 20px;
     color: gold;
     letter-spacing: 10px;
@@ -14,7 +13,7 @@ body{background-color: #38A7C3;}
 
 }
 .subtitle{
-    padding-left: 15%;
+    text-align: center;
     font-size: 30px;
 }
 .name{
@@ -31,9 +30,7 @@ body{background-color: #38A7C3;}
 .image {
     margin-left: 5%;
     width: 80%;
-    height: auto;
     position: relative;
-    z-index: 1;
 }
 .compteur{
     margin-right: 35%;
@@ -45,6 +42,7 @@ body{background-color: #38A7C3;}
     color: gold;
 }
 @charset "UTF-8";
+
 
 /*!
  * animate.css -http://daneden.me/animate
